--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
  
-    <title>username@home &gt; newtab</title>
+    <title>Gregor@home &gt; newtab</title>
  
     <style>
         html {
@@ -111,28 +111,28 @@
 </head>
  
 <body>
-    <p><span>username@home &gt; </span>newtab</p>
+    <p><span>Gregor@home &gt; </span>newtab</p>
     <nav>
         <ul>
-            <li>category</li>
-            <li><a href="#">link</a></li>
+            <li>Coding</li>
+            <li><a href="#">https://github.com/</a></li>
         </ul>
         <ul>
-            <li>category</li>
-            <li><a href="#">link</a></li>
+            <li>Mail</li>
+            <li><a href="#">https://mail.google.com/mail/u/1/#inbox</a></li>
         </ul>
         <ul>
-            <li>category</li>
-            <li><a href="#">link</a></li>
+            <li>Social Media</li>
+            <li><a href="#">https://www.instagram.com/</a></li>
         </ul>
         <ul>
-            <li>category</li>
-            <li><a href="#">link</a></li>
+            <li>Personal Website</li>
+            <li><a href="#">http://www.gregor.gg/</a></li>
         </ul>
     </nav>
  
     <form method="get" action="https://www.google.com/search?q=">
-        <p><span>username@home &gt; search &gt; </span><input type="text" name="q" spellcheck="false" placeholder=" " autofocus></p>
+        <p><span>Gregor@home &gt; search &gt; </span><input type="text" name="q" spellcheck="false" placeholder=" " autofocus></p>
     </form>
 </body>
  
