--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
     <nav>
         <ul>
             <li>Coding</li>
-            <li><a href="#">https://github.com/</a></li>
+            <li><a href="#">github.com/</a></li>
         </ul>
         <ul>
             <li>Mail</li>
-            <li><a href="#">https://mail.google.com/mail/u/1/#inbox</a></li>
+            <li><a href="#">mail.google.com</a></li>
         </ul>
         <ul>
             <li>Social Media</li>
-            <li><a href="#">https://www.instagram.com/</a></li>
+            <li><a href="#">instagram.com</a></li>
         </ul>
         <ul>
             <li>Personal Website</li>
-            <li><a href="#">http://www.gregor.gg/</a></li>
+            <li><a href="#">gregor.gg/</a></li>
         </ul>
     </nav>
  
