--- a/index.html
+++ b/index.html
@@ -115,23 +115,23 @@
     <nav>
         <ul>
             <li>Coding</li>
-            <li><a href="#">github.com/</a></li>
+            <li><a href="#">Click/</a></li>
         </ul>
         <ul>
             <li>Mail</li>
-            <li><a href="#">mail.google.com</a></li>
+            <li><a href="#">Click</a></li>
         </ul>
         <ul>
             <li>Social Media</li>
-            <li><a href="#">instagram.com</a></li>
+            <li><a href="#">Click</a></li>
         </ul>
         <ul>
             <li>Personal Website</li>
-            <li><a href="#">gregor.gg/</a></li>
+            <li><a href="#">Click/</a></li>
         </ul>
     </nav>
  
-    <form method="get" action="https://www.google.com/search?q=">
+    <form method="get" action="https://duckduckgo.com/?q=">
         <p><span>Gregor@home &gt; search &gt; </span><input type="text" name="q" spellcheck="false" placeholder=" " autofocus></p>
     </form>
 </body>
