--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </ul>
         <ul>
             <li>Personal Website</li>
-            <li><a href="#">Click/</a></li>
+            <li><a href="#">Click</a></li>
         </ul>
     </nav>
  
