--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <nav>
         <ul>
             <li>Coding</li>
-            <li><a href="#">Click/</a></li>
+            <li><a href="#">Click</a></li>
         </ul>
         <ul>
             <li>Mail</li>
